# rust_crud_grpc

./: .env.sample  Cargo.toml  README.md  schema.sql
proto/: sensor.proto
src/: error.rs  lib.rs
src/sensor/: dao.rs  mod.rs  model.rs  service.rs
