[package]
name = "rust_crud_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] 
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.9"
chrono = "0.4.19"
log = "0.4.0"
env_logger = "0.9.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
anyhow = "1.0"
assert_matches = "1.5"
lazy_static = "1.4.0"
async_once = "0.2.6"
derive_more = "0.99.17"
dotenv = "0.15.0"
config = "0.13.1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.7"
